--- a/my-project/css/styles-chapter5.css
+++ b/my-project/css/styles-chapter5.css
@@ -1,30 +1,33 @@
 @charset "UTF-8";
-.body {
-	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
-	padding-left: 20px;
-	padding-right: 20px;
+* { margin: 0; padding: 0; border: 0; font-size: 100%; }
+#my-id {
+	background-image:url("../images/abstract-art-black-background-blur-1040499 copy.png");
 	padding-bottom: 20px;
 	padding-top: 20px;
+	background-position: center;
+}
+.header {
+	font-family: 'Lato', sans-serif;
+	font-size: 30px;
+	font-weight: bold;
+	color: aliceblue;
+	text-align: center;
+}
+.body {
+	font-family: 'Lato', sans-serif;
+	font-weight: bold;
+	padding-top: 10px;
+	margin-left: 30px;
+	margin-right: 30px;
 	text-align: justify
 }
-.page-title {
-	color: midnightblue;
-	background-color: whitesmoke;
-	border: 1px solid #00143B;
-	text-align: center;
-	padding: 0.5em;
-}
-#opener {
-	font-weight: bold;
-}
-#image {
+.image {
+	margin-left: 30px;
+	margin-right: 30px;
+	margin-bottom: 20px;
+	margin-top: 20px;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-.my-container {
-	border: 1px solid #000;
-	padding: 0.5em;
+	justify-content: center
+	
 }
